(which have higer pickle.HIGHEST_PROTOCOL).

*****

Bumped bibmanager version to 1.2.4.
Fixes #63


*****  Sat Aug 15 14:53:10 2020 +0200  *****

Fixed bug in bm.loadfile() when entry is in a single line.

*****

Fixed indentation error in tests.

*****

Cosmetics.

*****

Bumped bibmanager version to 1.2.5.
Fixes #66


*****  Sun Aug 16 13:16:21 2020 +0200  *****

Enabled fetch and open optional arguments for ads-add command.
Solves first part of issue #65.

*****

Bumped bibmanager version to 1.2.6.


*****  Sat Sep  5 20:51:09 CEST 2020  *****

Added --add --fetch --open options to ads_search command-line arg
Documentations is TBD.

*****

Modified pm.set_pdf() and pm.fetch() functions to return the
output PDF file path/name if successfully dowloaded or the entry has
a non None pdf value.
Updated docs and tests accordingly.

*****

Added pdf_file argument to pm.open() function that sets the output
PDF file path/name (even if not in the database).

*****

Enabled fetching PDF files from ADS for entries that are not in the
database.

*****

Redirect ads-add's fetch/open to cli_fetch().


*****  Sun Sep 6 13:29:18 CEST 2020  *****

Documented add, fetch, and open arguments for ads-search and ads-add.

*****

Changed fetch's open command from -open to -o, --open for consistency
with the rest of the options in the ads-add and ads-search commands.
Updated docs and tests.

*****

Cleaned up ADS and PDF docs.

*****

Bumped bibmanager version to 1.2.7.


*****  Sat Oct 24 21:17:54 CEST 2020  *****

Added stdout argument to in subprocess call to open PDF
to redirect any screen output into nothingness.

*****

Added initial implementation of the bibmanager database browser
which is enabled through the 'bibm browse' command.
The code is in the new browser.py file.
The browser provides an interactive full-screen visualization
of the entries in the database.

*****

Updated requirements (prompt_toolkit > 3.0).

*****

Updated docs to describe the new browse command.
